--- a/index.html
+++ b/index.html
@@ -5,25 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>부동산 매물 메모장 - Himkong</title>
 
-    <!-- ✅ Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- ✅ TailwindCSS (안정버전) -->
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
 
-    <!-- ✅ Leaflet 지도 라이브러리 -->
+    <!-- ✅ Leaflet -->
     <link
       rel="stylesheet"
       href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
     />
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
-    <!-- ✅ Supabase (실제 서버 연결) -->
+    <!-- ✅ Supabase -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 
     <style>
+      html,
       body {
-        background-color: #f8f9fa;
+        height: 100%;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #f8fafc;
       }
       #map {
-        height: 100vh;
+        height: 100%;
+        width: 100%;
+      }
+      .modal-bg {
+        background-color: rgba(0, 0, 0, 0.4);
       }
     </style>
   </head>
@@ -44,27 +53,28 @@
       </button>
     </header>
 
+    <!-- ✅ 메인 -->
     <main class="flex flex-1 overflow-hidden">
-      <!-- ✅ 왼쪽 매물 목록 -->
+      <!-- 왼쪽 리스트 -->
       <aside
-        class="w-1/3 bg-white border-r overflow-y-auto"
         id="property-list"
+        class="w-1/3 bg-white border-r overflow-y-auto p-2"
       >
-        <p class="text-gray-400 text-center mt-5">매물 데이터를 불러오는 중...</p>
+        <p class="text-gray-500 text-center mt-5">매물 데이터를 불러오는 중...</p>
       </aside>
 
-      <!-- ✅ 오른쪽 지도 -->
-      <div class="flex-1" id="map"></div>
+      <!-- 오른쪽 지도 -->
+      <div id="map" class="flex-1"></div>
     </main>
 
-    <!-- ✅ 매물 등록 폼 (모달) -->
+    <!-- ✅ 매물 등록 폼 -->
     <div
       id="formModal"
-      class="hidden fixed inset-0 bg-black bg-opacity-40 flex items-center justify-center"
+      class="hidden fixed inset-0 modal-bg flex items-center justify-center z-50"
     >
       <form
         id="add-form"
-        class="bg-white p-6 rounded-lg shadow-lg w-96 space-y-3"
+        class="bg-white p-6 rounded-lg shadow-lg w-96 space-y-3 max-h-[90vh] overflow-y-auto"
       >
         <h2 class="text-lg font-bold mb-3">매물 등록</h2>
 
@@ -155,17 +165,20 @@
       </form>
     </div>
 
-    <!-- ✅ 연결된 main.js -->
+    <!-- ✅ main.js 연결 -->
     <script src="./main.js"></script>
 
     <script>
-      // 모달 열기 / 닫기
       const openForm = document.getElementById('openForm');
       const closeForm = document.getElementById('closeForm');
       const formModal = document.getElementById('formModal');
 
-      openForm.addEventListener('click', () => (formModal.classList.remove('hidden')));
-      closeForm.addEventListener('click', () => (formModal.classList.add('hidden')));
+      openForm.addEventListener('click', () =>
+        formModal.classList.remove('hidden')
+      );
+      closeForm.addEventListener('click', () =>
+        formModal.classList.add('hidden')
+      );
     </script>
   </body>
 </html>
